<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QueryInformation</class>
 <widget class="QDialog" name="QueryInformation">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>376</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>查询信息</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>501</width>
     <height>371</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QComboBox" name="choice">
        <item>
         <property name="text">
          <string>请选择查询方式</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>员工号</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>姓名</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>性别</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>民族</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>学历</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>电话号码</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>工资</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>奖金</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>部门编号</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>部门名称</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>职位</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="inputInformation">
        <property name="placeholderText">
         <string>请输入查询内容</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="searchButton">
        <property name="text">
         <string>查询</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTableView" name="tableViewInformation"/>
    </item>
   </layout>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
